compiler/tests/fixtures/valid/plan_with_loop.viv
// Plan with a loop instruction

action visit:
    roles:
        @visitor:
            as: initiator


plan tour:
    roles:
        @traveler:
            as: character
    phases:
        >visiting:
            loop @traveler.destinations as _@place:
                queue action visit:
                    with partial:
                        @visitor: @traveler
            end
            succeed;