compiler/tests/fixtures/invalid/semantics/reaction_priority_on_plan.viv
// Invalid: reaction priority on plan target

action step:
    roles:
        @doer:
            as: initiator

plan my-plan:
    roles:
        @planner:
            as: character
    phases:
        >do-it:
            queue action step:
                with partial:
                    @doer: @planner
            succeed;

action trigger:
    roles:
        @actor:
            as: initiator
    reactions:
        queue plan my-plan:
            with partial:
                @planner: @actor
            priority: 5
